--- a/e.html
+++ b/e.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-  <title>Number e</title>
+  <title>Euler's Number</title>
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
   <style>
   body{font-family: arial,verdana,sans-serif;font-size: 31px}
@@ -84,7 +84,7 @@
 </head>
 <body>
 <center>
-<h1>Number e<h1>
+<h1>Euler's Number<h1>
 <label for="input">eps=</label><input type="input" id="input" name="solution" /><input type="button" id="solve" name="solve" value="e"/>
 <p id="solution"></p>
 </center>
